FIX : Animated text overflowed on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,8 +19,9 @@
   color: #de8500;
 }
 
-body {
+#main {
   overflow-x: hidden;
+  position: relative;
 }
 
 .navbar-nav {
